--- a/Atividades/TestStarter/index.html
+++ b/Atividades/TestStarter/index.html
@@ -1819,7 +1819,7 @@ firebase.auth().onAuthStateChanged(function(user){
   }
 
   /* =========================
-     Boot
+     Boot---!
   ========================= */
   window.addEventListener('load', function(){
     window.activityCompleted = false;
